newsletter polished UI

--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -1,6 +1,16 @@
 ---
 title: Tina Cloud Starter
 blocks:
+  - title: Subscribe to our Newsletter
+    description: Stay updated with our latest news and updates.
+    buttonText: Subscribe
+    placeholderText: Your email address
+    privacyText: >-
+      I agree to receive email newsletters and accept the data privacy
+      statement.
+    successMessage: Thank you for subscribing!
+    errorMessage: An error occurred. Please try again later.
+    _template: newsletter
   - background: ''
     text: Support for live editing and editorial workflow
     url: 'https://tina.io/editorial-workflow'
